--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.6",
     "moment": "^2.22.2",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-text-dot": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
