--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.6",
+    "lodash-es": "^4.17.11",
     "moment": "^2.22.2",
+    "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0",
+    "swiper": "^4.4.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-star-rating": "^1.6.1",
     "vue-text-dot": "^1.0.0"
   },
