--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
     "cookie-universal-nuxt": "^2.0.11",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.6",
+    "js-cookie": "^2.2.0",
     "lodash-es": "^4.17.11",
     "moment": "^2.22.2",
     "node-sass": "^4.11.0",
