--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "swiper": "^4.4.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-star-rating": "^1.6.1",
-    "vue-text-dot": "^1.0.0"
+    "vue-text-dot": "^1.0.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
