--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.0.0",
     "sass-loader": "^7.1.0",
     "swiper": "^4.4.2",
+    "v-click-outside-x": "^3.5.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-star-rating": "^1.6.1",
     "vue-text-dot": "^1.0.0",
