--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
     "cookie-universal-nuxt": "^2.0.11",
@@ -21,6 +22,7 @@
     "moment": "^2.22.2",
     "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
+    "nuxt-fontawesome": "^0.4.0",
     "sass-loader": "^7.1.0",
     "swiper": "^4.4.2",
     "v-click-outside-x": "^3.5.6",
