--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "cookie-universal-nuxt": "^2.0.11",
@@ -25,6 +26,7 @@
     "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-validate": "^0.1.2",
     "sass-loader": "^7.1.0",
     "swiper": "^4.4.2",
     "v-click-outside-x": "^3.5.6",
