--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "devHttps": "node server/index.js"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
@@ -26,6 +27,7 @@
     "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-svg-loader": "^1.0.1",
     "nuxt-validate": "^0.1.2",
     "sass-loader": "^7.1.0",
     "swiper": "^4.4.2",
