--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "swiper": "^4.4.2",
     "v-click-outside-x": "^3.5.6",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-froala-wysiwyg": "^2.9.1",
     "vue-star-rating": "^1.6.1",
     "vue-text-dot": "^1.0.0",
+    "vue2-editor": "^2.6.6",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
