--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "moment": "^2.23.0",
-    "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-svg-loader": "^1.0.1",
     "nuxt-validate": "^0.1.2",
-    "sass-loader": "^7.1.0",
     "swiper": "^4.4.2",
     "v-click-outside-x": "^3.5.6",
     "vue-awesome-swiper": "^3.1.3",
@@ -44,7 +42,9 @@
   "devDependencies": {
     "autoprefixer": "^9.4.4",
     "moment-locales-webpack-plugin": "^1.0.7",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.11.0",
-    "postcss-gap-properties": "^2.0.0"
+    "postcss-gap-properties": "^2.0.0",
+    "sass-loader": "^7.1.0"
   }
 }
