--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.1.0",
+    "@nuxtjs/pwa": "^2.6.0",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "cookie-universal-nuxt": "^2.0.11",
