--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "animejs": "^3.0.1",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "cookie-universal-nuxt": "^2.0.11",
