--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "nuxt-device-detect": "^1.1.2",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-svg-loader": "^1.0.1",
-    "nuxt-validate": "^0.1.2",
     "swiper": "^4.4.2",
     "v-click-outside-x": "^3.5.6",
+    "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
     "vue-froala-wysiwyg": "^2.9.1",
     "vue-star-rating": "^1.6.1",
