--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
     "vue-froala-wysiwyg": "^2.9.1",
+    "vue-input-tag": "^2.0.1",
+    "vue-select": "^2.5.1",
     "vue-star-rating": "^1.6.1",
     "vue-text-dot": "^1.0.0",
     "vue2-editor": "^2.6.6",
