--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-select": "^2.5.1",
     "vue-star-rating": "^1.6.1",
     "vue-text-dot": "^1.0.0",
+    "vue-zondicons": "^0.1.10",
     "vue2-editor": "^2.6.6",
     "vuex-iframe-sync": "^1.4.5",
     "vuex-router-sync": "^5.0.0"
