--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-froala-wysiwyg": "^2.9.1",
     "vue-input-tag": "^2.0.1",
+    "vue-loaders": "^2.0.0",
     "vue-select": "^2.5.1",
     "vue-star-rating": "^1.6.1",
     "vue-text-dot": "^1.0.0",
