--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-loaders": "^2.0.0",
     "vue-select": "^2.5.1",
     "vue-star-rating": "^1.6.1",
+    "vue-swipe-tab": "^2.0.2",
     "vue-text-dot": "^1.0.0",
     "vue-zondicons": "^0.1.10",
     "vue2-editor": "^2.6.6",
