--- a/package.json
+++ b/package.json
@@ -37,13 +37,12 @@
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
     "vue-froala-wysiwyg": "^2.9.1",
-    "vue-input-tag": "^2.0.1",
     "vue-loaders": "^2.0.0",
-    "vue-select": "^2.5.1",
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
     "vue-text-dot": "^1.0.0",
     "vue-zondicons": "^0.1.10",
+    "vue2-datepicker": "^2.9.1",
     "vue2-editor": "^2.6.6",
     "vuex-iframe-sync": "^1.4.5",
     "vuex-router-sync": "^5.0.0"
