--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-svg-loader": "^1.0.1",
     "swiper": "^4.4.2",
+    "uuid": "^3.3.2",
     "v-click-outside-x": "^3.5.6",
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
