--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
     "vue-froala-wysiwyg": "^2.9.1",
+    "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
