--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
     "vue-text-dot": "^1.0.0",
+    "vue-truncate-collapsed": "^2.1.0",
     "vue-zondicons": "^0.1.10",
     "vue2-datepicker": "^2.9.1",
     "vue2-editor": "^2.6.6",
