--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-froala-wysiwyg": "^2.9.1",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
+    "vue-pell-editor": "^2.0.1",
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
     "vue-text-dot": "^1.0.0",
