--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "cookie-universal-nuxt": "^2.0.11",
     "cross-env": "^5.2.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
@@ -35,6 +37,7 @@
     "nuxt-webfontloader": "^1.0.0",
     "swiper": "^4.4.2",
     "uuid": "^3.3.2",
+    "v-charts": "^1.19.0",
     "v-click-outside-x": "^3.5.6",
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
@@ -47,6 +50,7 @@
     "vue-zondicons": "^0.1.10",
     "vue2-datepicker": "^2.9.1",
     "vue2-editor": "^2.6.6",
+    "vuebars": "^0.1.3",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
