--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "vue-infinite-loading": "^2.4.3",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
+    "vue-match-media": "^1.0.3",
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
     "vue-text-dot": "^1.0.0",
     "vue-tiny-lazyload-img": "^0.1.0",
     "vue-truncate-collapsed": "^2.1.0",
+    "vue-viewports": "^3.1.2",
     "vue-zondicons": "^0.1.10",
     "vue2-datepicker": "^2.9.1",
     "vue2-editor": "^2.6.6",
