--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lodash-es": "^4.17.11",
     "moment": "^2.23.0",
     "nuxt": "^2.0.0",
-    "nuxt-device-detect": "^1.1.2",
+    "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-svg-loader": "^1.0.1",
     "nuxt-webfontloader": "^1.0.0",
@@ -50,10 +50,10 @@
     "vue-text-dot": "^1.0.0",
     "vue-tiny-lazyload-img": "^0.1.0",
     "vue-truncate-collapsed": "^2.1.0",
-    "vue-viewports": "^3.1.2",
     "vue-zondicons": "^0.1.10",
     "vue2-datepicker": "^2.9.1",
     "vue2-editor": "^2.6.6",
+    "vue2-touch-events": "^1.1.2",
     "vuebars": "^0.1.3",
     "vuex-router-sync": "^5.0.0"
   },
