--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Arif Iwamoto",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "NUXT_HOST=0.0.0.0 NUXT_PORT=3333 nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -27,6 +27,7 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
     "js-cookie": "^2.2.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "moment": "^2.23.0",
@@ -41,6 +42,7 @@
     "v-click-outside-x": "^3.5.6",
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-carousel": "^0.18.0",
     "vue-infinite-loading": "^2.4.3",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
