--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/auth": "^4.5.3",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/component-cache": "^1.1.4",
+    "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
