--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/vuetify": "^0.5.5",
     "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
@@ -43,7 +44,6 @@
     "v-click-outside-x": "^3.5.6",
     "vee-validate": "^2.1.5",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-carousel": "^0.18.0",
     "vue-infinite-loading": "^2.4.3",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
