--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "v-charts": "^1.19.0",
     "v-click-outside-x": "^3.5.6",
     "vee-validate": "^2.1.5",
+    "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-infinite-loading": "^2.4.3",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
     "vue-match-media": "^1.0.3",
+    "vue-server-renderer": "^2.6.10",
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
     "vue-text-dot": "^1.0.0",
     "vue-tiny-lazyload-img": "^0.1.0",
     "vue-truncate-collapsed": "^2.1.0",
