--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue2-editor": "^2.6.6",
     "vue2-touch-events": "^1.1.2",
     "vuebars": "^0.1.3",
+    "vuetify-upload-button": "^1.2.2",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
