--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^5.2.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
+    "intersection-observer": "^0.5.1",
     "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
@@ -51,6 +52,7 @@
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
     "vue-match-media": "^1.0.3",
+    "vue-scrollama": "^1.1.1",
     "vue-server-renderer": "^2.6.10",
     "vue-star-rating": "^1.6.1",
     "vue-swipe-tab": "^2.0.2",
