--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "nuxt": "^2.0.0",
     "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-svg-loader": "^1.0.1",
     "nuxt-webfontloader": "^1.0.0",
     "swiper": "^4.4.2",
     "uuid": "^3.3.2",
@@ -65,6 +64,7 @@
     "vue2-editor": "^2.6.6",
     "vue2-touch-events": "^1.1.2",
     "vuebars": "^0.1.3",
+    "vuetify-loader": "^1.2.2",
     "vuetify-upload-button": "^1.2.2",
     "vuex-router-sync": "^5.0.0"
   },
