--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/robots": "^2.0.0",
+    "@nuxtjs/svg-sprite": "^0.2.0",
     "@nuxtjs/vuetify": "^0.5.5",
     "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
@@ -39,6 +40,7 @@
     "nuxt": "^2.0.0",
     "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.0.0",
     "swiper": "^4.4.2",
     "uuid": "^3.3.2",
