--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "v-click-outside-x": "^3.5.6",
     "vee-validate": "^2.1.5",
     "vue": "^2.6.10",
+    "vue-avatar-editor-improved": "^1.0.4",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-croppa": "^1.3.8",
     "vue-infinite-loading": "^2.4.3",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
