--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vue": "^2.6.10",
     "vue-avatar-editor-improved": "^1.0.4",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-count-to": "^1.0.13",
     "vue-croppa": "^1.3.8",
     "vue-infinite-loading": "^2.4.3",
     "vue-line-clamp": "^1.3.2",
