--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nuxt": "^2.0.0",
     "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-stripe-module": "^2.0.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.0.0",
     "swiper": "^4.4.2",
