--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue-swipe-tab": "^2.0.2",
     "vue-template-compiler": "^2.6.10",
     "vue-text-dot": "^1.0.0",
+    "vue-the-mask": "^0.11.1",
     "vue-tiny-lazyload-img": "^0.1.0",
     "vue-truncate-collapsed": "^2.1.0",
     "vue-zondicons": "^0.1.10",
