--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash-es": "^4.17.11",
     "moment": "^2.23.0",
     "nuxt": "^2.0.0",
+    "nuxt-compress": "^1.0.2",
     "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-stripe-module": "^2.0.0",
