--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vue-avatar-editor-improved": "^1.0.4",
     "vue-awesome-swiper": "^3.1.3",
     "vue-chartjs": "^3.4.2",
+    "vue-clamp": "^0.2.1",
     "vue-count-to": "^1.0.13",
     "vue-croppa": "^1.3.8",
     "vue-infinite-loading": "^2.4.3",
