--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/robots": "^2.0.0",
     "@nuxtjs/svg-sprite": "^0.2.0",
+    "@nuxtjs/toast": "^3.2.0",
     "@nuxtjs/vuetify": "^0.5.5",
     "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
