--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
     "intersection-observer": "^0.5.1",
-    "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
@@ -44,6 +43,7 @@
     "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-stripe-module": "^2.0.0",
+    "nuxt-universal-storage": "^0.2.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.0.0",
     "swiper": "^4.4.2",
