nuxt update success

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/robots": "^2.0.0",
+    "@nuxtjs/style-resources": "^0.1.2",
     "@nuxtjs/svg-sprite": "^0.2.0",
     "@nuxtjs/toast": "^3.2.0",
     "@nuxtjs/vuetify": "^0.5.5",
+    "@sum.cumo/nuxt-styleguide": "^4.0.3",
     "atob": "^2.1.2",
     "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
@@ -40,7 +42,7 @@
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "moment": "^2.23.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.7.1",
     "nuxt-compress": "^1.0.2",
     "nuxt-device-detect": "^1.1.4",
     "nuxt-fontawesome": "^0.4.0",
