--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/moment": "^1.1.0",
     "@nuxtjs/pwa": "^2.6.0",
