--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^5.2.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
+    "imagemagick": "^0.1.3",
     "intersection-observer": "^0.5.1",
     "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
@@ -88,10 +89,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.4.4",
+    "css-loader": "^2.1.1",
     "moment-locales-webpack-plugin": "^1.0.7",
     "node-sass": "^4.11.0",
     "nodemon": "^1.19.0",
     "postcss-gap-properties": "^2.0.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
