--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@nuxtjs/svg-sprite": "^0.2.0",
     "@nuxtjs/toast": "^3.2.0",
     "@nuxtjs/vuetify": "^0.5.5",
-    "@sum.cumo/nuxt-styleguide": "^4.0.3",
+    "@sum.cumo/nuxt-styleguide": "^5.3.0",
     "atob": "^2.1.2",
+    "axios": "^0.19.0",
+    "browserslist": "^4.6.2",
+    "caniuse-lite": "^1.0.30000974",
     "chart.js": "^2.7.3",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
@@ -37,6 +40,8 @@
     "cross-env": "^5.2.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.6",
+    "epic-spinners": "^1.1.0",
+    "fstream": "^1.0.12",
     "imagemagick": "^0.1.3",
     "intersection-observer": "^0.5.1",
     "js-yaml": "^3.13.1",
