--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
     "vue-match-media": "^1.0.3",
+    "vue-observe-visibility": "^0.4.4",
     "vue-scrollama": "^1.1.1",
     "vue-scroller": "^2.2.4",
     "vue-scrollto": "^2.15.0",
