--- a/.dockerignore
+++ b/.dockerignore
@@ -17,4 +17,7 @@ npm-debug.log# Elastic Beanstalk Files
 .gitignore# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
 .gitignore
