--- a/.dockerignore
+++ b/.dockerignore
@@ -20,4 +20,7 @@ npm-debug.log# Elastic Beanstalk Files
 .gitignore# Elastic Beanstalk Files
 .elasticbeanstalk/*
 .git
+.gitignore# Elastic Beanstalk Files
+.elasticbeanstalk/*
+.git
 .gitignore
