--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxtjs/style-resources": "^0.1.2",
     "@nuxtjs/svg-sprite": "^0.2.1",
     "@nuxtjs/toast": "^3.2.1",
+    "@nuxtjs/universal-storage": "^0.4.0",
     "@nuxtjs/vuetify": "^0.5.6",
     "@sum.cumo/nuxt-styleguide": "^5.3.0",
     "atob": "^2.1.2",
@@ -54,7 +55,6 @@
     "nuxt-device-detect": "^1.1.5",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-stripe-module": "^2.0.0",
-    "nuxt-universal-storage": "^0.2.1",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
     "swiper": "^4.5.0",
