--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "atob": "^2.1.2",
     "axios": "^0.19.0",
     "browserslist": "^4.6.4",
-    "caniuse-lite": "^1.0.30000981",
+    "caniuse-lite": "^1.0.30000984",
     "chart.js": "^2.8.0",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.4",
@@ -47,8 +47,9 @@
     "intersection-observer": "^0.5.1",
     "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.11",
-    "lodash-es": "^4.17.11",
+    "lodash": "^4.17.14",
+    "lodash-es": "^4.17.14",
+    "mixin-deep": "^2.0.1",
     "moment": "^2.24.0",
     "nuxt": "^2.8.1",
     "nuxt-compress": "^1.0.2",
@@ -57,6 +58,7 @@
     "nuxt-stripe-module": "^2.0.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
+    "set-value": "^2.0.1",
     "swiper": "^4.5.0",
     "tar": "^4.4.10",
     "tb-skeleton": "^0.3.6",
