--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-                                                                                                                                                                   {
+{
   "name": "theta",
   "version": "1.0.0",
   "description": "My fabulous Nuxt.js project",
@@ -58,6 +58,7 @@
     "nuxt-stripe-module": "^2.0.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
+    "redirect-ssl": "^1.4.0",
     "set-value": "^2.0.1",
     "swiper": "^4.5.0",
     "tar": "^4.4.10",
