--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/recaptcha": "^0.5.2",
     "@nuxtjs/robots": "^2.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "@nuxtjs/svg-sprite": "^0.2.1",
