--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nuxt-compress": "^1.0.2",
     "nuxt-device-detect": "^1.1.5",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-purgecss": "^0.2.1",
     "nuxt-stripe-module": "^2.0.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
