--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "nuxt-stripe-module": "^2.0.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
+    "redirect-ssl": "^1.4.0",
     "set-value": "^2.0.1",
     "swiper": "^4.5.0",
     "tar": "^4.4.10",
