--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devHttps": "node server/index.js"
   },
   "dependencies": {
+    "@bazzite/nuxt-optimized-images": "^0.2.1",
     "@clampy-js/vue-clampy": "^1.0.6",
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
@@ -45,6 +46,9 @@
     "epic-spinners": "^1.1.0",
     "fstream": "^1.0.12",
     "imagemagick": "^0.1.3",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
     "intersection-observer": "^0.5.1",
     "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
@@ -61,7 +65,9 @@
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
     "redirect-ssl": "^1.4.0",
+    "responsive-loader": "^1.2.0",
     "set-value": "^2.0.1",
+    "sharp": "^0.22.1",
     "swiper": "^4.5.0",
     "tar": "^4.4.10",
     "tb-skeleton": "^0.3.6",
@@ -97,7 +103,8 @@
     "vue2-touch-events": "^1.1.2",
     "vuetify-loader": "^1.2.2",
     "vuetify-upload-button": "^1.2.2",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "webp-loader": "^0.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
