--- a/package.json
+++ b/package.json
@@ -97,8 +97,7 @@
     "vue2-editor": "^2.9.1",
     "vue2-touch-events": "^1.1.2",
     "vuetify-loader": "^1.2.2",
-    "vuetify-upload-button": "^1.2.2",
-    "vuex-router-sync": "^5.0.0"
+    "vuetify-upload-button": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
