--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "intersection-observer": "^0.5.1",
     "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.14",
-    "lodash-es": "^4.17.14",
+    "lodash-es": "^4.17.15",
     "mixin-deep": "^2.0.1",
     "moment": "^2.24.0",
     "nuxt": "^2.8.1",
@@ -73,6 +72,7 @@
     "vue-count-to": "^1.0.13",
     "vue-croppa": "^1.3.8",
     "vue-infinite-loading": "^2.4.4",
+    "vue-lazy-hydration": "^1.0.0-beta.9",
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^2.0.0",
     "vue-match-media": "^1.0.3",
