--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "nuxt-stripe-module": "^2.0.0",
     "nuxt-validate": "^0.1.3",
     "nuxt-webfontloader": "^1.1.0",
-    "responsive-loader": "^1.2.0",
     "set-value": "^2.0.1",
     "swiper": "^4.5.0",
     "tar": "^4.4.10",
@@ -97,7 +96,9 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "postcss-gap-properties": "^2.0.0",
+    "responsive-loader": "^1.2.0",
     "sass-loader": "^7.1.0",
+    "sharp": "^0.23.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
