--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/auth": "^4.8.1",
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/component-cache": "^1.1.5",
+    "@nuxtjs/device": "^1.2.3",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.2.0",
@@ -51,7 +52,6 @@
     "moment": "^2.24.0",
     "nuxt": "^2.8.1",
     "nuxt-compress": "^1.0.2",
-    "nuxt-device-detect": "^1.1.5",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-purgecss": "^0.2.1",
     "nuxt-stripe-module": "^2.0.0",
