--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sum.cumo/nuxt-styleguide": "^5.3.0",
     "atob": "^2.1.2",
     "axios": "^0.19.0",
+    "browser-image-resizer": "^2.0.1",
     "browserslist": "^4.6.6",
     "caniuse-lite": "^1.0.30000989",
     "cookie": "^0.3.1",
