--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/google-adsense": "^1.1.3",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/moment": "^1.2.0",
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/recaptcha": "^0.5.3",
     "@nuxtjs/robots": "^2.4.0",
