--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "element-ui": "^2.11.1",
     "epic-spinners": "^1.1.0",
     "fstream": "^1.0.12",
-    "intersection-observer": "^0.5.1",
+    "intersection-observer": "^0.7.0",
     "js-yaml": "^3.13.1",
     "jwt-decode": "^2.2.0",
     "lodash-es": "^4.17.15",
@@ -57,7 +57,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-purgecss": "^0.2.1",
     "nuxt-stripe-module": "^2.0.0",
-    "nuxt-validate": "^0.1.3",
+    "nuxt-validate": "^1.0.1",
     "nuxt-webfontloader": "^1.1.0",
     "set-value": "^2.0.1",
     "swiper": "^4.5.0",
@@ -65,7 +65,7 @@
     "tb-skeleton": "^0.3.6",
     "uuid": "^3.3.3",
     "v-charts": "^1.19.0",
-    "v-click-outside-x": "^3.7.1",
+    "v-click-outside-x": "^4.0.19",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
@@ -75,7 +75,7 @@
     "vue-infinite-loading": "^2.4.4",
     "vue-lazy-hydration": "^1.0.0-beta.9",
     "vue-line-clamp": "^1.3.2",
-    "vue-loaders": "^2.0.0",
+    "vue-loaders": "^3.0.2",
     "vue-match-media": "^1.0.3",
     "vue-observe-visibility": "^0.4.4",
     "vue-pwa-installer": "^0.2.0",
@@ -92,17 +92,21 @@
     "vuetify-upload-button": "^1.2.2"
   },
   "devDependencies": {
+    "sass": "^1.22.12",
+    "fibers": "^4.0.1",
+    "webpack": "^4.40.1",
     "autoprefixer": "^9.6.1",
-    "css-loader": "^1.0.1",
+    "css-loader": "^3.2.0",
     "moment-locales-webpack-plugin": "^1.1.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "postcss-gap-properties": "^2.0.0",
     "responsive-loader": "^1.2.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "sharp": "^0.23.0",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
+
   }
 }
