--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "v-click-outside-x": "^4.0.19",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
+    "vue-advanced-cropper": "^0.12.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clamp": "^0.2.1",
     "vue-count-to": "^1.0.13",
