--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "My fabulous Nuxt.js project",
   "author": "Arif Iwamoto",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "NUXT_HOST=0.0.0.0 NUXT_PORT=3333 nuxt",
     "build": "nuxt build",
