--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   },
   "dependencies": {
     "@clampy-js/vue-clampy": "^1.0.6",
-    "@fortawesome/free-brands-svg-icons": "^5.10.2",
-    "@fortawesome/free-regular-svg-icons": "^5.10.2",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@nuxtjs/auth": "^4.8.1",
-    "@nuxtjs/axios": "^5.6.0",
+    "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/component-cache": "^1.1.5",
     "@nuxtjs/device": "^1.2.3",
-    "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/google-adsense": "^1.1.3",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/moment": "^1.2.0",
+    "@nuxtjs/google-analytics": "^2.2.1",
+    "@nuxtjs/moment": "^1.4.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/recaptcha": "^0.5.3",
-    "@nuxtjs/robots": "^2.4.0",
+    "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/style-resources": "^0.1.2",
     "@nuxtjs/svg-sprite": "^0.2.1",
-    "@nuxtjs/toast": "^3.2.1",
+    "@nuxtjs/toast": "^3.3.0",
     "@nuxtjs/universal-storage": "^0.4.0",
     "@nuxtjs/vuetify": "^0.5.7",
     "@sum.cumo/nuxt-styleguide": "^5.3.0",
     "atob": "^2.1.2",
     "axios": "^0.19.0",
     "browser-image-resizer": "^2.0.1",
-    "browserslist": "^4.6.6",
-    "caniuse-lite": "^1.0.30000989",
+    "browserslist": "^4.7.2",
+    "caniuse-lite": "^1.0.30001008",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
-    "echarts": "^4.2.1",
+    "echarts": "^4.4.0",
     "element-ui": "^2.11.1",
     "epic-spinners": "^1.1.0",
     "fstream": "^1.0.12",
@@ -52,7 +52,7 @@
     "lodash-es": "^4.17.15",
     "mixin-deep": "^2.0.1",
     "moment": "^2.24.0",
-    "nuxt": "^2.9.1",
+    "nuxt": "^2.10.2",
     "nuxt-compress": "^1.0.2",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-purgecss": "^0.2.1",
@@ -60,15 +60,15 @@
     "nuxt-validate": "^1.0.1",
     "nuxt-webfontloader": "^1.1.0",
     "set-value": "^2.0.1",
-    "swiper": "^4.5.0",
-    "tar": "^4.4.10",
+    "swiper": "^4.5.1",
+    "tar": "^4.4.13",
     "tb-skeleton": "^0.3.6",
     "uuid": "^3.3.3",
     "v-charts": "^1.19.0",
     "v-click-outside-x": "^4.0.19",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
-    "vue-advanced-cropper": "^0.12.2",
+    "vue-advanced-cropper": "^0.12.6",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clamp": "^0.2.1",
     "vue-count-to": "^1.0.13",
@@ -78,35 +78,35 @@
     "vue-line-clamp": "^1.3.2",
     "vue-loaders": "^3.0.2",
     "vue-match-media": "^1.0.3",
-    "vue-observe-visibility": "^0.4.4",
+    "vue-observe-visibility": "^0.4.6",
     "vue-pwa-installer": "^0.2.0",
-    "vue-scrollama": "^1.1.1",
+    "vue-scrollama": "^1.1.9",
     "vue-swipe-tab": "^2.0.4",
     "vue-template-compiler": "^2.6.10",
     "vue-text-dot": "^1.0.0",
     "vue-the-mask": "^0.11.1",
     "vue-tiny-lazyload-img": "^0.1.0",
     "vue-zondicons": "^0.1.10",
-    "vue2-datepicker": "^2.12.0",
+    "vue2-datepicker": "^2.13.3",
     "vue2-touch-events": "^1.1.2",
     "vuetify-loader": "^1.3.0",
     "vuetify-upload-button": "^1.2.2"
   },
   "devDependencies": {
-    "sass": "^1.22.12",
-    "fibers": "^4.0.1",
-    "webpack": "^4.40.1",
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^9.7.1",
     "css-loader": "^3.2.0",
+    "fibers": "^4.0.2",
     "moment-locales-webpack-plugin": "^1.1.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "node-sass": "^4.13.0",
+    "nodemon": "^1.19.4",
     "postcss-gap-properties": "^2.0.0",
     "responsive-loader": "^1.2.0",
+    "sass": "^1.23.3",
     "sass-loader": "^8.0.0",
-    "sharp": "^0.23.0",
+    "sharp": "^0.23.2",
     "style-loader": "^1.0.0",
     "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "webpack": "^4.41.2"
   }
 }
