--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "@nuxtjs/recaptcha": "^0.5.3",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.0.1",
-    "@nuxtjs/style-resources": "^0.1.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/svg-sprite": "^0.2.1",
-    "@nuxtjs/toast": "^3.3.0",
+    "@nuxtjs/toast": "^3.2.1",
     "@nuxtjs/universal-storage": "^0.4.0",
-    "@nuxtjs/vuetify": "^0.5.7",
+    "@nuxtjs/vuetify": "^1.9.0",
     "@sum.cumo/nuxt-styleguide": "^5.3.0",
     "atob": "^2.1.2",
     "axios": "^0.19.0",
     "browser-image-resizer": "^2.0.1",
     "browserslist": "^4.7.2",
-    "caniuse-lite": "^1.0.30001008",
+    "caniuse-lite": "^1.0.30001006",
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.4",
     "cross-env": "^5.2.0",
@@ -89,12 +89,14 @@
     "vue-tiny-lazyload-img": "^0.1.0",
     "vue-zondicons": "^0.1.10",
     "vue2-datepicker": "^2.13.3",
+    "vue2-perfect-scrollbar": "^1.2.1",
     "vue2-touch-events": "^1.1.2",
+    "vuetify": "^2.1.11",
     "vuetify-loader": "^1.3.0",
     "vuetify-upload-button": "^1.2.2"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.1",
+    "autoprefixer": "^9.7.0",
     "css-loader": "^3.2.0",
     "fibers": "^4.0.2",
     "moment-locales-webpack-plugin": "^1.1.0",
@@ -102,7 +104,7 @@
     "nodemon": "^1.19.4",
     "postcss-gap-properties": "^2.0.0",
     "responsive-loader": "^1.2.0",
-    "sass": "^1.23.3",
+    "sass": "^1.23.1",
     "sass-loader": "^8.0.0",
     "sharp": "^0.23.2",
     "style-loader": "^1.0.0",
